[workspace]
members = [
    "pallets/*",
    "runtime",
    "node",
    "cli",
    "tools/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Nodara BIOSPHERE Core Team"]
repository = "https://github.com/Nodara/Nodara-BIOSPHERE"
homepage = "https://nodara.org"
description = "Nodara BIOSPHERE QUANTIC – Living Blockchain System"
keywords = ["substrate", "blockchain", "biosphere", "quantum", "ai"]
categories = ["cryptography::cryptocurrencies", "wasm", "blockchain"]

[workspace.dependencies]
# Substrate core (locked to ensure compatibility)
sp-core = { version = "27.0.0", default-features = false }
sp-application-crypto = { version = "27.0.0", default-features = false }
sp-runtime = { version = "27.0.0", default-features = false }
sp-io = { version = "27.0.0", default-features = false }

# Substrate Bip39 (seed/entropy)
substrate-bip39 = { version = "0.4.1", default-features = false }

# Schnorrkel strictly locked
schnorrkel = { version = "0.10.2", default-features = false }

# Serde & utils
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hex = "0.4.3"

# Logging
log = "0.4.21"
env_logger = "0.10.1"

# Benchmarking
frame-benchmarking = { version = "27.0.0", optional = true }

# Common utilities
thiserror = "1.0"
cfg-if = "1.0"

# Cryptography
rand = "0.8.5"
blake2 = "0.10.6"
sha2 = "0.10.8"

# Smart pointer helpers
lazy_static = "1.4.0"

# Testing & dev
criterion = { version = "0.5", optional = true }
proptest = { version = "1.4", optional = true }
tempfile = "3.10.1"

# CLI tools
clap = { version = "4.5.1", features = ["derive"] }

[patch.crates-io]
# Force schnorrkel version globally (avoids mismatches)
schnorrkel = { version = "0.10.2", package = "schnorrkel" }

# Lock substrate-bip39 to avoid trait conflicts
substrate-bip39 = { version = "0.4.1", package = "substrate-bip39" }

# Optional: if a local override is needed for debugging
# sp-core = { path = "../patched/sp-core" }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-application-crypto/std",
    "substrate-bip39/std",
    "serde/std",
    "schnorrkel/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "std"
]

