[workspace]
resolver = "2"
members = [
    "cli",
    "ci_cd",
    "deployment_and_operation",
    "legal_and_compliance",
    "monitoring_and_dashboard",
    "node",
    "offchain_workers",
    "bug_bounty_and_community",
    "sdk",
    "runtime",

    # Pallets
    "pallets/bridge",
    "pallets/nodara_biosphere",
    "pallets/nodara_growth_model",
    "pallets/nodara_id",
    "pallets/nodara_interop",
    "pallets/nodara_iot_bridge",
    "pallets/nodara_liquidity_flow",
    "pallets/nodara_marketplace",
    "pallets/nodara_pow",
    "pallets/nodara_predictive_guard",
    "pallets/nodara_reputation",
    "pallets/nodara_reserve_fund",
    "pallets/nodara_reward_engine",
    "pallets/nodara_stability_guard",
    "pallets/nodara_standards",

    # Outils
    "risk_management"
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.72"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
sp-runtime = "30.0.0"
sp-std = "10.0.0"
frame-support = "30.0.0"
frame-system = "30.0.0"

[patch.crates-io]
schnorrkel = { git = "https://github.com/w3f/schnorrkel.git", tag = "v0.9.0" }
