[package]
name = "nodara_bug_bounty_and_community"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Bug Bounty and Community Engagement documentation and scripts for Nodara BIOSPHÈRE QUANTIC."
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re/tree/main"

[dependencies]
