[package]
name = "nodara_deployment_and_operations"
version = "1.0.0"
authors = ["Votre Nom <votre.email@example.com>"]
edition = "2021"
description = "Deployment and operations configuration for Nodara BIOSPHÈRE QUANTIC."
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re"
readme = "README.md"

[lib]
path = "src/lib.rs"
