[package]
name = "legal_and_compliance"
version = "1.0.0"
authors = ["Nodara Dev Team <core@nodara.org>"]
edition = "2021"
description = "Legal and Compliance module for Nodara BIOSPHÈRE QUANTIC. This module implements regulatory compliance, legal verification, and audit logging for the network."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rdemz/Nodara-Biosph-re"
keywords = ["substrate", "pallet", "compliance", "legal", "audit"]
categories = ["cryptography::identity", "finance", "blockchain"]
publish = false

[dependencies]
frame-support = { version = "6.0.0", default-features = false }
frame-system = { version = "6.0.0", default-features = false }
sp-runtime = { version = "6.0.0", default-features = false }
sp-std = { version = "6.0.0", default-features = false }
codec = { version = "6.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-core = "6.0.0"
sp-io = "6.0.0"
frame-benchmarking = { version = "6.0.0", optional = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
    "scale-info/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
