[package]
name = "monitoring_and_dashboard"
version = "0.1.0"
authors = ["Votre Nom <votre.email@example.com>"]
edition = "2021"
description = "Module de monitoring et dashboard pour Nodara BIOSPHÈRE QUANTIC"
license = "Apache-2.0"

[dependencies]
# Serveur HTTP asynchrone
hyper = { version = "0.14", features = ["full"] }
# Runtime asynchrone
tokio = { version = "1", features = ["full"] }
# Outils de métriques Prometheus
prometheus = "0.13"
# Création de variables statiques paresseuses
lazy_static = "1.4"
# Journalisation structurée
tracing = "0.1"
tracing-subscriber = "0.3"
