[package]
name = "nodara_node"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Nodara Node - The main executable node for Nodara BIOSPHÈRE QUANTIC."
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re/tree/main"
rust-version = "1.68.0"

[dependencies]
# Dépendances pour un node Substrate de base
sp-core = { version = "6.0.0", default-features = false }
sp-runtime = { version = "6.0.0", default-features = false }
frame-support = { version = "6.0.0", default-features = false }
frame-system = { version = "6.0.0", default-features = false }
log = "0.4"
env_logger = "0.10"

# Autres dépendances nécessaires pour le node
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
