[package]
name = "offchain_workers"
version = "1.0.0"
edition = "2021"
authors = ["Votre Nom <votre.email@example.com>"]
description = "Offchain workers for Nodara BIOSPHÈRE QUANTIC: Library for offchain parallel processing tasks."
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
rayon = "1.6"
log = "0.4"
