[package]
name = "risk_management"
version = "1.0.0"
edition = "2021"
description = "Module de gestion des risques pour Nodara BIOSPHÈRE QUANTIC."
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re"
readme = "README.md"

[lib]
path = "src/lib.rs"
