[package]
name = "nodara_sdk"
version = "1.0.0"
authors = ["Votre Nom <votre.email@example.com>"]
edition = "2021"
description = "JavaScript/TypeScript SDK for interacting with Nodara BIOSPHÈRE QUANTIC."
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re"
readme = "README.md"

[lib]
path = "src/lib.rs"
