[package]
name = "pallet-bridge"
version = "0.1.0"
authors = ["Votre Nom <votre.email@example.com>"]
edition = "2018"
publish = false

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }
codec = { version = "4.0.0-dev", default-features = false }
scale-info = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
