[package]
name = "pallet-bridge"
version = "0.1.0"
authors = ["Votre Nom <votre.email@example.com>"]
edition = "2021"
description = "Module de pont inter-chaînes pour Nodara BIOSPHÈRE QUANTIC."

# Ce module est prévu pour être utilisé dans un environnement Substrate,
# donc les dépendances suivantes sont indispensables.

[dependencies]
frame-support = { version = "6.0.0", default-features = false }
frame-system  = { version = "6.0.0", default-features = false }
sp-runtime    = { version = "6.0.0", default-features = false }
sp-std        = "6.0.0"
parity-scale-codec = { version = "3.6.0", default-features = false }
scale-info    = "2.3.0"  # Pour fournir des métadonnées type-safety

[dev-dependencies]
frame-benchmarking = { version = "6.0.0", default-features = false }
sp-keyring         = "6.0.0"
