[package]
name = "pallet-bridge"
version = "0.1.0"
authors = ["Votre Nom <votre.email@example.com>"]
edition = "2021"
description = "Module de pont inter-chaînes pour Nodara BIOSPHÈRE QUANTIC."
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re"
readme = "README.md"

[dependencies]
frame-support = { version = "30.0.0", default-features = false }
frame-system  = { version = "30.0.0", default-features = false }
sp-runtime    = { version = "30.0.0", default-features = false }
sp-std        = { version = "10.0.0", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false }
scale-info    = "2.3.0"

[dev-dependencies]
frame-benchmarking = { version = "30.0.0", default-features = false }
sp-keyring         = { version = "30.0.0", default-features = false }
