[package]
name = "nodara_biosphere"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Core module for Nodara BIOSPHÈRE QUANTIC. Implements dynamic state transitions, quantum flux calculations and DAO governance integration."
license = "MIT"

[dependencies]
frame-support = { version = "6.0.0", default-features = false }
frame-system = { version = "6.0.0", default-features = false }
sp-runtime = "6.0.0"
sp-std = "6.0.0"
parity-scale-codec = { version = "3.4.0", default-features = false }
scale-info = "2.3.0"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
