[package]
name = "nodara_interop"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Nodara Interop Module for Nodara BIOSPHÈRE QUANTIC: Secure cross-chain communication."
license = "MIT"
repository = "https://github.com/rdemz/Nodara-Biosph-re/tree/main"
readme = "README.md"

[dependencies]
frame-support    = { version = "30.0.0", default-features = false }
frame-system     = { version = "30.0.0", default-features = false }
sp-runtime       = { version = "30.0.0", default-features = false }
sp-std           = { version = "10.0.0", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false }
scale-info       = "2.3.0"

[dev-dependencies]
frame-benchmarking = { version = "30.0.0", default-features = false }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
