[package]
name = "nodara_liquidity_flow"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Nodara Liquidity Flow Module - Dynamic Liquidity Management for Nodara BIOSPHÈRE QUANTIC"
license = "MIT"

[dependencies]
frame-support = { version = "6.0.0", default-features = false }
frame-system = { version = "6.0.0", default-features = false }
sp-runtime = "6.0.0"
sp-std = "6.0.0"
parity-scale-codec = "3.4.0"
scale-info = "2.3.0"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
