[package]
name = "nodara_pow"
version = "0.1.0"
authors = ["Nodara Team <team@nodara.com>"]
edition = "2021"
license = "MIT"
description = "Module de preuve de travail (POW) pour Nodara"
repository = "https://github.com/rdemz/Nodara-Biosph-re"
readme = "README.md"

[dependencies]
frame-support    = { version = "30.0.0", default-features = false }
frame-system     = { version = "30.0.0", default-features = false }
sp-runtime       = { version = "30.0.0", default-features = false }
sp-std           = { version = "10.0.0", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false }
scale-info       = "2.3.0"
